mf-app/environments/base/mf-app/deployment.yaml
---
# Source: mf-app/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mf-app
  labels:
    app.kubernetes.io/name: mf-app
    app.kubernetes.io/instance: mf-app
    app: mf-app
    app.kubernetes.io/part-of: inventory
    app.openshift.io/runtime: spring
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mf-app
      app.kubernetes.io/instance: mf-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mf-app
        app.kubernetes.io/instance: mf-app
    spec:
      serviceAccountName: mf-app
      volumes:
      containers:
        - name: mf-app
          image: replace:replace
          imagePullPolicy: IfNotPresent
          volumeMounts:
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
              scheme: HTTP
            timeoutSeconds: 10
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
              scheme: HTTP
            timeoutSeconds: 10
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 3
          resources:
            null
