mf-app/environments/base/mf-app/service.yaml
---
# Source: mq-spring-app/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mf-app
  labels:
    app.kubernetes.io/name: mf-app
    app.kubernetes.io/instance: mf-app
    app: mf-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: mf-app
    app.kubernetes.io/instance: mf-app
