mf-app/environments/base/mf-app/route.yaml
---
# Source: mq-spring-app/templates/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: mf-app
  annotations:
    argocd.argoproj.io/sync-options: Validate=false
spec:
  to:
    kind: Service
    name: mf-app
    weight: 100
  tls:
    termination: edge
  wildcardPolicy: None
